--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
 
 #centerDiv {
   background: transparent;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 input::placeholder {
@@ -32,4 +31,12 @@ input::placeholder {
 .pointer-animation {
   transform-origin: center;
   animation: pointerMove 0.2s ease-in-out;
+}
+
+.wheel {
+  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 20px 10px, 
+  rgba(0, 0, 0, 0.12) 0px 4px 6px 0px,   
+  rgba(0, 0, 0, 0.17) 0px 6px 12px 0px; 
 }
